Исправлен чёрный на чёном при поиске

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,10 @@ body {
 	color: #fff;
 }
 
+.Select-input > input {
+	color: #fff;
+}
+
 .Select .Select-value {
 	background-color: rgb(27, 29, 30);
 }
