--- a/assets/style.css
+++ b/assets/style.css
@@ -1,32 +1,45 @@
+/* Общая характеристика */
 body {
 	background-color: #242829;
 }
 
+/* Заморочная настройка переключателей */
 .Select {
 	background-color: rgb(27, 29, 30);
 	color: #fff;
 }
-
 .Select-input > input {
 	color: #fff;
 }
-
 .Select .Select-value {
 	background-color: rgb(27, 29, 30);
 }
-
 .Select-control {
   background-color: rgb(25, 25, 25) !important;
 	color: #fff;
 }
-
 .Select-menu-outer {
 	background-color: rgb(27, 29, 30);
 	color: #fff;
 	border-radius: 10;
 }
-
-
 .has-value.Select--single>.Select-control .Select-value .Select-value-label, .has-value.is-pseudo-focused.Select--single>.Select-control .Select-value .Select-value-label{
-	color: white
+	color: white;
+}
+
+
+/* Div для социалок */
+.socials {
+  background-color: #2e4ebf;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: row;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+/* Текст социалок */
+.socials_text {
+  color: white;
+  text-decoration: auto;
+  padding-left: 8%;
 }
